kubernetes/apps/filament-tracker/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filament-tracker-backend
  namespace: filament-tracker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filament-tracker-backend
  template:
    metadata:
      labels:
        app: filament-tracker-backend
    spec:
      serviceAccountName: filament-tracker-service-account
      containers:
        - name: backend
          image: manosgrigorakis/filament-tracker-backend@sha256:d861df917daf9747571e41d6ab745b88153f99a3f399fef1568e3863bb04353d
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
