kubernetes/apps/filament-tracker/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filament-tracker-frontend
  namespace: filament-tracker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filament-tracker-frontend
  template:
    metadata:
      labels:
        app: filament-tracker-frontend
    spec:
      containers:
        - name: frontend
          image: manosgrigorakis/filament-tracker-frontend@sha256:77f9a64e3bceee04e43e5113267b63b09988b50be8556fd46d4890d8a68a21bc
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "250m"
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
